--- a/app/views/test.html
+++ b/app/views/test.html
@@ -1,1 +1,7 @@
 <h2>{{titre}}</h2>
+
+<div lorem></div>
+
+<div ng-repeat="client in clients">
+  <client data="client" message="Inconnu"></client>
+</div>
